--- a/seqan/misc/multitest/style.css
+++ b/seqan/misc/multitest/style.css
@@ -8,7 +8,7 @@ td
 }
 th
 {
-    width:60px;
+    width:70px;
     font-family:sans-serif;
     padding:1px 1px 1px 1px;
     font-size:75%;
@@ -50,7 +50,7 @@ a
     font-size:110%;
 }
 
-.server
+.failed
 {
-    font-weight:bold;
+    background-color:#ff0000;
 }
