git-svn-id: http://svn.seqan.de/seqan/trunk@1033 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/misc/multitest/style.css
+++ b/seqan/misc/multitest/style.css
@@ -28,6 +28,7 @@ a
 .pending
 {
     background-color:#f0f0f0;
+    font-size:70%;
 }
 .started
 {
@@ -37,10 +38,12 @@ a
 .error
 {
     background-color:#ff0000;
+    font-size:70%;
 }
 .ok
 {
     background-color:#00ff00;
+    font-size:70%;
 }
 
 .mode
