git-svn-id: http://svn.seqan.de/seqan/trunk@1138 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -145,6 +145,13 @@ A:hover, A:link, A:visited
     margin-bottom: 2px;
     color: #333333;
 }
+.section_headline_explicite
+{
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 2px;
+    color: #333333;
+}
 .section
 {
     margin-bottom: 10px;
