git-svn-id: http://svn.seqan.de/seqan/trunk@1188 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -362,6 +362,12 @@ A:hover, A:link, A:visited
 {
 	border:1px dashed #999999;
 	margin:1em 8px 1em 8px;
+	border-right:0px;
+}
+.image_sub_block td
+{
+	border-right:1px dashed #999999;
+	padding:0.4em;
 }
 .image_sub_block_caption
 {
