--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -451,3 +451,34 @@ A:hover, A:link, A:visited
     color:#333333;
 }
 
+#searchmask
+{
+    margin-top:10px;
+    padding:8px 0px 4px 8px;
+    border-top:1px solid #999990;
+    border-bottom:1px solid #999990;
+    background-color:#ffffdd;
+}
+#searchtitle
+{
+    padding-bottom:2px;
+    font-size:80%;
+    
+}
+#search
+{
+    width:164px;
+    color:#222222;
+}
+#result
+{
+    margin-top:3px;
+    padding-left:2px;
+    font-size:100%;
+    
+}
+#result a
+{
+    color:#222222;
+}
+
