--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -541,3 +541,128 @@ A:hover, A:link, A:visited
 {
     padding-left:0px;
 }
+
+
+.tree
+{
+    background-color:#ffffff;
+    margin:1em 0 1em 1em;
+    color:#333333;
+}
+.tree A:hover, .tree A:link, .tree A:visited
+{
+    color:#333333;
+}
+.tree_td_first
+{
+    border-right:1px solid #666666;
+}
+#tree_multiblock .tree_table_down .tree_td_first
+{
+    border-right:1px solid #666666;
+    border-top:1px solid #666666;
+}
+#tree_multiblock .tree_table_up .tree_td_first
+{
+    border-right:1px solid #666666;
+    border-bottom:1px solid #666666;
+}
+.tree_td_last
+{
+    border-left:1px solid #ffffff;
+}
+.tree_table_down .tree_td_left
+{
+    border-top:1px solid #666666;
+    border-right:1px solid #666666;
+}
+.tree_table_up .tree_td_left
+{
+    border-bottom:1px solid #666666;
+    border-right:1px solid #666666;
+}
+.tree_table_down .tree_td_right
+{
+    border-top:1px solid #666666;
+    border-left:1px solid #ffffff;
+}
+.tree_table_up .tree_td_right
+{
+    border-bottom:1px solid #666666;
+    border-left:1px solid #ffffff;
+}
+.tree_table_down .tree_td_connector
+{
+    border-top:1px solid #666666;
+    border-left:1px solid #666666;
+}
+.tree_table_up .tree_td_connector
+{
+    border-bottom:1px solid #666666;
+    border-left:1px solid #666666;
+}
+.tree_table_down .tree_td_connector_end
+{
+    border-top:1px solid #666666;
+}
+.tree_table_up .tree_td_connector_end
+{
+    border-bottom:1px solid #666666;
+}
+.tree_td_line
+{
+    border-right:1px solid #666666;
+}
+.tree_td_none
+{
+    border-left:1px solid #ffffff;
+}
+
+.tree_td_subtree
+{
+}
+
+.tree_td_node
+{
+    padding:0 5px 0 5px;
+}
+.tree_node
+{
+    font-size:80%;
+    padding:0.2em 0.4em 0.2em 0.4em;
+    border-width:1px
+}
+#tree_node_Concept
+{
+    border-color: #666666;
+    border-style: dashed;
+    background-color:#ddddff;
+}
+#tree_node_Class
+{
+    border-color: #666666;
+    border-style: solid;
+    background-color:#ffffcc;
+    font-style:italic;
+}
+#tree_node_Spec
+{
+    border-color: #666666;
+    border-style: solid;
+    background-color:#ffffcc;
+}
+
+.tree_td_central
+{
+    padding:0 5px 0 5px;
+}
+.tree_central
+{
+    padding:0.3em 3em 0.3em 3em;
+    border-width:2px;
+    font-size:100%;
+    font-weight:bold;
+    color:#555555;
+    
+}
+
