git-svn-id: http://svn.seqan.de/seqan/trunk@1307 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -688,3 +688,10 @@ A:hover, A:link, A:visited
     font-weight:bold;
     margin:0.1em 0 0.9em 0;
 }
+
+
+.glossary_link
+{
+    font-style:italic;
+}
+
