git-svn-id: http://svn.seqan.de/seqan/trunk@1432 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/docs/dddoc_html.css
+++ b/seqan/docs/dddoc_html.css
@@ -280,7 +280,7 @@ A:hover, A:link, A:visited
     color: #2b2b2b;
 }
 
-.value_tab
+.value_tab, .indexpage_members_tab
 {
     margin-top: 4px;
     margin-left: 12px;
@@ -315,6 +315,11 @@ A:hover, A:link, A:visited
     padding-top: 2px;
     padding-left: 6px;
     width:100%
+}
+
+.indexpage_members_tab
+{
+    margin-left:22px;
 }
 
 .table_explicite
