--- a/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
@@ -63,7 +63,7 @@ div.contents
 {
     float: right;
     border: 5px solid white;
-    background: #F1F6FB;
+    background: #F0F0F0;
     padding: 5px;
 }
 
@@ -112,8 +112,15 @@ h5, h6 { font-size: 1em; }
 
 a, a:visited, a:active
 {
-    color: #25A;
+    color: #009;
     text-decoration: none;
+}
+
+div.contents a,
+div.contents a:visited,
+div.contents a:active
+{
+    color: #333;
 }
 
 a:hover
@@ -136,7 +143,7 @@ a:hover
     font-weight: bolder;
     padding: 3px;
     background: #EEE;
-    border: 1px solid #CCC;
+    border: 1px solid #999;
 }
 
 .section table td.signature {
@@ -176,7 +183,7 @@ div.section table
 div.section table td
 {
     padding: 5px;
-    border: 1px solid #CCC;
+    border: 1px solid #999;
 }
 
 div.section table td p
