--- a/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
@@ -6,7 +6,7 @@
 body
 {
     background: #F6F6F1;
-    font: 14px/1.428 "Lucida Grande", "Lucida Sans Unicode", Lucida, Arial, Helvetica, sans-serif;
+    font: 13px/1.428 "Lucida Grande", "Lucida Sans Unicode", Lucida, Arial, Helvetica, sans-serif;
     color: #333;
     padding: 20px 10px 14px 10px;
 }
@@ -205,6 +205,19 @@ div.file_section p
     margin-bottom: 10px;
 }
 
+.file_section pre
+{
+    padding: 5px;
+}
+
+.file_section .highlight pre
+{
+    background: #EDF3FE;
+    padding-left: 5px;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
+}
+
 /* ===========================================================================
  * Text Formatting
  * ===========================================================================
@@ -225,10 +238,20 @@ div.image
 .example pre
 {
   padding: 6px 11px 7px 11px;
-  background-color: #EEE;
-  border: 1px solid #666;
+  background-color: #EDF3FE;
   margin-bottom: 18px;
   /*margin: 0 12px 10px 12px;*/
+}
+
+.signature_section pre
+{
+  border: 1px solid #999;
+}
+
+.example pre
+{
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
 }
 
 /* ===========================================================================
@@ -263,331 +286,65 @@ div.highlight
  * ===========================================================================
  */
 
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #f0f0f0; }
-.highlight .c { color: #60a0b0; font-style: italic } /* Comment */
-.highlight .err { border: 1px solid #FF0000 } /* Error */
-.highlight .k { color: #007020; font-weight: bold } /* Keyword */
-.highlight .o { color: #666666 } /* Operator */
-.highlight .cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #007020 } /* Comment.Preproc */
-.highlight .c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
-.highlight .gd { color: #A00000 } /* Generic.Deleted */
+/*.highlight .hll { background-color: #ffffcc }
+.highlight  { background: #EDF3FE; }*/
+.highlight .c { color: #0099FF; font-style: italic } /* Comment */
+.highlight .err { color: #AA0000; background-color: #FFAAAA } /* Error */
+.highlight .k { color: #006699; font-weight: bold } /* Keyword */
+.highlight .o { color: #555555 } /* Operator */
+.highlight .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #009999 } /* Comment.Preproc */
+.highlight .c1 { color: #0099FF; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #0099FF; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .gd { background-color: #FFCCCC; border: 1px solid #CC0000 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #808080 } /* Generic.Output */
-.highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+.highlight .gh { color: #003300; font-weight: bold } /* Generic.Heading */
+.highlight .gi { background-color: #CCFFCC; border: 1px solid #00CC00 } /* Generic.Inserted */
+.highlight .go { color: #AAAAAA } /* Generic.Output */
+.highlight .gp { color: #000099; font-weight: bold } /* Generic.Prompt */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #0040D0 } /* Generic.Traceback */
-.highlight .kc { color: #007020; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #007020 } /* Keyword.Pseudo */
-.highlight .kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #902000 } /* Keyword.Type */
-.highlight .m { color: #40a070 } /* Literal.Number */
-.highlight .s { color: #4070a0 } /* Literal.String */
-.highlight .na { color: #4070a0 } /* Name.Attribute */
-.highlight .nb { color: #007020 } /* Name.Builtin */
-.highlight .nc { color: #0e84b5; font-weight: bold } /* Name.Class */
-.highlight .no { color: #60add5 } /* Name.Constant */
-.highlight .nd { color: #555555; font-weight: bold } /* Name.Decorator */
-.highlight .ni { color: #d55537; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #007020 } /* Name.Exception */
-.highlight .nf { color: #06287e } /* Name.Function */
-.highlight .nl { color: #002070; font-weight: bold } /* Name.Label */
-.highlight .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #062873; font-weight: bold } /* Name.Tag */
-.highlight .nv { color: #bb60d5 } /* Name.Variable */
-.highlight .ow { color: #007020; font-weight: bold } /* Operator.Word */
+.highlight .gu { color: #003300; font-weight: bold } /* Generic.Subheading */
+.highlight .gt { color: #99CC66 } /* Generic.Traceback */
+.highlight .kc { color: #006699; font-weight: bold } /* Keyword.Constant */
+.highlight .kd { color: #006699; font-weight: bold } /* Keyword.Declaration */
+.highlight .kn { color: #006699; font-weight: bold } /* Keyword.Namespace */
+.highlight .kp { color: #006699 } /* Keyword.Pseudo */
+.highlight .kr { color: #006699; font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #007788; font-weight: bold } /* Keyword.Type */
+.highlight .m { color: #FF6600 } /* Literal.Number */
+.highlight .s { color: #CC3300 } /* Literal.String */
+.highlight .na { color: #330099 } /* Name.Attribute */
+.highlight .nb { color: #336666 } /* Name.Builtin */
+.highlight .nc { color: #00AA88; font-weight: bold } /* Name.Class */
+.highlight .no { color: #336600 } /* Name.Constant */
+.highlight .nd { color: #9999FF } /* Name.Decorator */
+.highlight .ni { color: #999999; font-weight: bold } /* Name.Entity */
+.highlight .ne { color: #CC0000; font-weight: bold } /* Name.Exception */
+.highlight .nf { color: #CC00FF } /* Name.Function */
+.highlight .nl { color: #9999FF } /* Name.Label */
+.highlight .nn { color: #00CCFF; font-weight: bold } /* Name.Namespace */
+.highlight .nt { color: #330099; font-weight: bold } /* Name.Tag */
+.highlight .nv { color: #003333 } /* Name.Variable */
+.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
 .highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #40a070 } /* Literal.Number.Float */
-.highlight .mh { color: #40a070 } /* Literal.Number.Hex */
-.highlight .mi { color: #40a070 } /* Literal.Number.Integer */
-.highlight .mo { color: #40a070 } /* Literal.Number.Oct */
-.highlight .sb { color: #4070a0 } /* Literal.String.Backtick */
-.highlight .sc { color: #4070a0 } /* Literal.String.Char */
-.highlight .sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #4070a0 } /* Literal.String.Double */
-.highlight .se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
-.highlight .sh { color: #4070a0 } /* Literal.String.Heredoc */
-.highlight .si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
-.highlight .sx { color: #c65d09 } /* Literal.String.Other */
-.highlight .sr { color: #235388 } /* Literal.String.Regex */
-.highlight .s1 { color: #4070a0 } /* Literal.String.Single */
-.highlight .ss { color: #517918 } /* Literal.String.Symbol */
-.highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #bb60d5 } /* Name.Variable.Class */
-.highlight .vg { color: #bb60d5 } /* Name.Variable.Global */
-.highlight .vi { color: #bb60d5 } /* Name.Variable.Instance */
-.highlight .il { color: #40a070 } /* Literal.Number.Integer.Long */
-
-/*
-body {
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  background: #FFF;
-  color: #000;
-  margin: 0px;
-  font-size: 0.82em;
-  line-height: 1.25em;
-}
-
-a {
-  color: #00F;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #333;
-  background: #FE8;
-}
-
-p {
-  margin-bottom: 1em;
-}
-
-h1 {
-    font-size: 2.1em;
-    font-weight: normal;
-    line-height: 1.2em;
-    margin: 1.4em 0 0.7em 0;
-}
-
-h2 {
-    font-size: 1.6em;
-    margin: 1.8em 0 0.8em 0;
-    font-weight: normal;
-    line-height: 1.2em;
-}
-
-h3 {
-    font-size: 1.4em;
-    color:#555;
-    margin: 1.4em 0 0.7em 0;
-    font-weight: normal;
-}
-
-h4 {
-    margin: 1.4em 0 0.5em 0;
-    font-size: 1em;
-}
-
-.clear
-{
-    clear: both;
-    width: 0; height: 0;
-}
-
-dt
-{
-    margin-bottom: 0.3em;
-    font-weight: bold;
-}
-
-dd
-{
-    margin-left: 2em;
-    margin-bottom: 1em;
-}
-
-dd p
-{
-    margin-top: 0.6em;
-}
-
-li
-{
-    margin: 0 0 0.5em 2em;
-}
-
-ul li
-{
-    list-style: disc;
-}
-
-ol li
-{
-    list-style: decimal;
-}
-
-.banner
-{
-    background: #EDF3FE;
-    border-bottom: 1px solid #ccc;
-    padding: 1em 2em 0.5em 2em;
-}
-.banner h1
-{
-    font-size: 1.2em;
-    margin: 0;
-}
-
-.banner h1 .type
-{
-    font-size: 0.833em;
-    display:block;
-}
-
-.banner h1 .type,
-.banner h1 .parent
-{
-    color: #666;
-}
-
-.banner ul
-{
-    margin-top: 0.3em;
-    margin-bottom: 0;
-    font-size: 0.85em;
-}
-
-.banner li
-{
-    list-style: none;
-    margin-left: 0;
-    margin-bottom: 0;
-}
-
-pre 
-{
-    margin-bottom: 1em;
-}
-
-.methods dt
-{
-    width: 1em;
-    font-size: 1.5em;
-    color:#AAA;
-    position: absolute;
-    font-weight: normal;
-    margin: 0;
-}
-
-.methods dd
-{
-    margin-left: 2.5em;
-    min-height: 1.8em;
-    -height: 1.8em;
-    padding-bottom: 0.8em;
-}
-
-
-.methods ul li
-{
-    margin-right: 0.7em;
-    margin-left: 0;
-    list-style: none;
-    display: inline;
-}
-
-#content {
-  margin: 2em;
-  margin-left: 3.5em;
-  margin-right: 3.5em;
-}
-
-
-.sectiontitle {
-  margin-top: 2em;
-  margin-bottom: 1.3em;
-  margin-left: -1.2em;
-  font-size: 1.2em;
-  padding: 0 0 0.25em 0;
-  font-weight: bold;
-  border-bottom: 1px solid #000;
-}
-
-.attr-rw {
-  padding-right: 1em;
-  text-align: center;
-  color: #055;
-}
-
-.attr-name {
-  font-weight: bold;
-  padding-right: 1em;
-}
-
-.attr-desc {
-}
-
-tt {
-  font-size: 1.15em;
-}
-
-.attr-value {
-  font-family: monospace;
-  padding-left: 1em;
-  font-size: 1.15em;
-}
-
-.dyn-source {
-  display: none;
-  background: #fffde8;
-  color: #000;
-  border: #ffe0bb dotted 1px;
-  margin: 0.5em 2em 0.5em 0;
-  padding: 0.5em;
-}
-
-.dyn-source .cmt {
-  color: #00F;
-  font-style: italic;
-}
-
-.dyn-source .kw {
-  color: #070;
-  font-weight: bold;
-}
-
-.description pre {
-  padding: 0.5em;
-  border: #ffe0bb dotted 1px;
-  background: #fffde8;
-}
-
-.method {
-    margin-bottom: 2em;
-}
-.method .description,
-.method .sourcecode
-{
-    margin-left: 1.2em;
-}
-.method h4
-{
-    border-bottom: 1px dotted #999;
-    padding: 0 0 0.2em 0;
-    margin-bottom: 0.8em;
-    font-size: 1.1em;
-    color:#333;
-}
-.method .title {
-    border-bottom: 1px dotted #666;
-    padding: 0 0 0.15em 0;
-    margin: 0 0 0.5em 0;
-    font-size: 1.2em;
-    line-height: 1.25em;
-}
-
-.method .sourcecode p.source-link {
-  text-indent: 0em;
-  margin-top: 0.5em;
-}
-
-.method .aka {
-  margin-top: 0.3em;
-  margin-left: 1em;
-  font-style: italic;
-  text-indent: 2em;
-}
-
-.method .source-link
-{
-    font-size: 0.85em;
-}
-*/
+.highlight .mf { color: #FF6600 } /* Literal.Number.Float */
+.highlight .mh { color: #FF6600 } /* Literal.Number.Hex */
+.highlight .mi { color: #FF6600 } /* Literal.Number.Integer */
+.highlight .mo { color: #FF6600 } /* Literal.Number.Oct */
+.highlight .sb { color: #CC3300 } /* Literal.String.Backtick */
+.highlight .sc { color: #CC3300 } /* Literal.String.Char */
+.highlight .sd { color: #CC3300; font-style: italic } /* Literal.String.Doc */
+.highlight .s2 { color: #CC3300 } /* Literal.String.Double */
+.highlight .se { color: #CC3300; font-weight: bold } /* Literal.String.Escape */
+.highlight .sh { color: #CC3300 } /* Literal.String.Heredoc */
+.highlight .si { color: #AA0000 } /* Literal.String.Interpol */
+.highlight .sx { color: #CC3300 } /* Literal.String.Other */
+.highlight .sr { color: #33AAAA } /* Literal.String.Regex */
+.highlight .s1 { color: #CC3300 } /* Literal.String.Single */
+.highlight .ss { color: #FFCC33 } /* Literal.String.Symbol */
+.highlight .bp { color: #336666 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #003333 } /* Name.Variable.Class */
+.highlight .vg { color: #003333 } /* Name.Variable.Global */
+.highlight .vi { color: #003333 } /* Name.Variable.Instance */
+.highlight .il { color: #FF6600 } /* Literal.Number.Integer.Long */
