--- a/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
@@ -171,6 +171,48 @@ h1:hover a.anchor, h2:hover a.anchor, h3:hover a.anchor { visibility: visible; }
 a.anchor { font-size: .8em; vertical-align: text-top; }
 
 /* ===========================================================================
+ * Permalink
+ * ===========================================================================
+ */
+
+div.permalink
+{
+    position: absolute;
+    top: 65px;
+    right: 18px;
+    text-align:right;
+    padding-right: 20px;
+    background: url(../i/link.png) right no-repeat;
+}
+
+div.permalink a,
+div.permalink a:active,
+div.permalink a:hover,
+div.permalink a:visited
+{
+    color: #333;
+    font-size: .8em;
+    text-decoration: none;
+}
+
+div#permalink-div
+{
+    display:block;
+    position: absolute;
+    right: 0px;
+    top: 20px;
+    display: none;
+    padding: 4px;
+    border: 1px solid black;
+    background: #EDF3FE;
+}
+
+div#permalink-div input
+{
+    width: 250px;
+}
+
+/* ===========================================================================
  * Tables
  * ===========================================================================
  */
