--- a/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
+++ b/seqan/util/py_lib/seqan/dddoc/tpl/css/main.css
@@ -103,6 +103,17 @@ h2, h3, h4
     border-bottom: 1px solid gray;
 }
 
+sup
+{
+    font-size: .7em;
+    vertical-align: top;
+}
+
+sup a
+{
+    vertical-align: top;
+}
+
 h1, h2, h3, h4, h5, h6 { font-weight: bold; margin: 0 0 .8em; }
 h1, .page-title h1 { font-size: 1.857em; }
 h2 { font-size: 1.600em; }
@@ -175,23 +186,17 @@ a.anchor { font-size: .8em; vertical-align: text-top; }
  * ===========================================================================
  */
 
-div.permalink
+a.permalink,
+a.permalink:active,
+a.permalink:hover,
+a.permalink:visited
 {
-    position: absolute;
-    top: 65px;
-    right: 18px;
-    text-align:right;
-    padding-right: 20px;
-    background: url(../i/link.png) right no-repeat;
-}
+    padding-top: 0px;
+    padding-left: 20px;
+    padding-right: 10px;
+    background: url(../i/link.png) no-repeat left center;
 
-div.permalink a,
-div.permalink a:active,
-div.permalink a:hover,
-div.permalink a:visited
-{
-    color: #333;
-    font-size: .8em;
+    color: #999;
     text-decoration: none;
 }
 
@@ -201,6 +206,7 @@ div#permalink-div
     position: absolute;
     right: 0px;
     top: 20px;
+    width: 258px;
     display: none;
     padding: 4px;
     border: 1px solid black;
